--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -20,6 +20,7 @@ $border-radius-md: 12px;
 $border-radius-lg: 16px;
 
 // Spacing
+$spacing-xxs: 2px;
 $spacing-xs: 4px;
 $spacing-sm: 8px;
 $spacing-md: 16px;
